Update/fix sidebar issue with height and spacing, add content and style for header section

--- a/style.css
+++ b/style.css
@@ -26,12 +26,32 @@ body {
     color: rgba(255, 255, 255, 0.9);
 }
 
-.big {
-    font-size: 1.5rem;
+.fontXL {
+    font-size: 1.3rem;
+}
+
+.fontLg {
+    font-size: 1.2rem;
+}
+
+.fontMd {
+    font-size: 1rem;
+}
+
+.fontSm {
+    font-size: .8rem;
+}
+
+.blue-bg {
+    background-color: #1992D4;
+
+}
+
+.grid {
+    display: grid;
 }
 
 #container {
-    display: grid;
     grid-template: 1fr 5fr / 1fr 4fr;
     grid-template-areas:
         "side head"
@@ -40,26 +60,28 @@ body {
 }
 
 #sidebar {
+    grid-template-rows: repeat(3, min-content) auto;
     grid-area: side;
-    background-color: #1992D4;
-    display: grid;
     gap: 50px;
     padding: 25px;
+    height: 100vh;
 }
 
-#sidebar > div,
-#sidebar > ul > li {
-    display: grid;
-    grid-template-columns: 2.5rem min-content;
+.icon-2-col {
+    grid-template-columns: 2.5rem auto;
     gap: 10px;
     align-items: center;
 }
 
 #header {
+    grid-template-columns: 2fr 1fr;
+    align-items: center;
     z-index: 1;
     grid-area: head;
     background-color: #fff;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, .2);
+    padding: 25px 2.5rem 15px;
+    gap: 25px;
 }
 
 #main {
@@ -68,10 +90,15 @@ body {
 }
 
 #sidebar li {
-    margin-bottom: 25px;
+    margin-bottom: 20px;
 }
 
 .icon {
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+#sidebar .icon {
     filter: invert(100%);
     justify-self: center;
 }
@@ -81,8 +108,42 @@ body {
     height: 2.5rem;
 }
 
-#nav-main .icon,
-#nav-util .icon {
-    width: 1.8rem;
-    height: 1.8rem;
+#search {
+    background-color: rgb(232, 234, 240);
+    border: none;
+    border-radius: 20px;
+    font-size: 1.5rem;
+    /* width: 100%; */
+}
+
+.avatar {
+    border-radius: 50%;
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
+.big {
+    width: 3.5rem;
+    height: 3.5rem;
+}
+
+.pad-left {
+    padding-left: 20px;
+}
+
+#header-user {
+    justify-self: end;
+}
+
+#header-btns {
+    grid-template-columns: repeat(3, auto);
+    gap: 20px;
+    justify-self: end;
+}
+
+button {
+    width: 6rem;
+    height: 2.5rem;
+    border: none;
+    border-radius: 2rem;
 }
